# PCS

./: .gitignore  .gitmodules  README.md  arithmetic_coding copy.ipynb  arithmetic_coding.ipynb  ccdm.py  ccdm_app.ipynb  pcs.py  plots.py  pyproject.toml  requirements.txt
Arithmetic Coding/exemplos/: arithmetic_coding_example.ipynb
Arithmetic Coding/src/: arithmetic_coding.py  utils.py
CCDM/: ccdm_example.ipynb
CCDM/exemplos/: ccdm_example.ipynb  teste.ipynb
CCDM/src/: ccdm.py  modulation.py  pcs.py
Huffman Code/exemplos/: geometric_huffman_code.ipynb  huffman_algorithm.ipynb  siintec.ipynb
Huffman Code/src/: geometric_huffman_code.py  huffman_code.py  huffman_shaping.py  information_metrics.py
Huffman Shaping/: base.ipynb  conceitos.ipynb  huffman_algorithm.ipynb
Huffman_Code/exemplos/: base.ipynb  distributions_test.ipynb  geometric_huffman_code.ipynb  huffman_algorithm.ipynb
Huffman_Code/src/: __init__.py  geometric_huffman_code.py  huffman_code.py  huffman_shaping.py  information_metrics.py  utils.py
pcs_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shaping_distributions/: distributions.mat  distributions_binomial.mat  distributions_gaussian.mat  function_huffman_shaping_test.ipynb  geometric_matlab_results.ipynb  ghc_matlab_results.ipynb  huffman_shaping_test.ipynb  kl_div_pam_shaping_huffman.ipynb  pam_binomial_huffman.ipynb  pam_gausshermite_huffman.ipynb  pam_gaussian_huffman.ipynb  pam_huffman.ipynb  pam_shaping_huffman.ipynb  pghc_results.mat  pghc_results_gaussian.mat  shaping_analysis.py
(+3 files in other folders)
