[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcs-project"
version = "0.1.0"
description = "PCS project"
authors = [
    { name="Caroline", email="sma.caroline@ymail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib", 
    "treelib"
]

[tool.setuptools]
package-dir = { "Huffman_Code" = "Huffman_Code/src", "HuffmanMatching" = "Huffman_DM/HuffmanMatching"}
packages = ["Huffman_Code", "HuffmanMatching"]

[tool.setuptools.package-data]
"*" = ["*.py"]
